welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:2: error: identifier expected but integer literal found.
	return i.e. 25
                    ^